--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
         <meta name="author" content="Samuel Fooks">
-        <link rel="author" href="https://samuelfooks.github.io" alt="https://plus.google.com/u/2/108203311083664618233">
+        <link rel="author" href="https://samuelfooks.github.io">
         <script src="JS.js"></script>
         <link href="/CSS.css" rel='stylesheet'>
        
