--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-        <meta name="author" content="Samuel Fooks">
-        <link rel="author" href="https://samuelfooks.github.io">
+        <!--<meta name="author" content="Samuel Fooks"> -->
+        <!--<link rel="author" href="https://samuelfooks.github.io"> -->
         <script src="JS.js"></script>
         <link href="/CSS.css" rel='stylesheet'>
        
@@ -144,6 +144,16 @@
                             <h5>Technical diploma focused on learning solar PV, off-grid energy systems, micro-wind, and solar thermal energy.</h5>
                         </th>
                         </tr>
+                        <tr>
+                        </th>
+                        <th>University of Waterloo (Waterloo, Canada)<br />
+                            <h5>2006-2011</h5>
+                        </th>
+                        <th>Bachelor of Environmental Science-Minor Biochemistry<br />
+                            <h5>Study focused in Environmental Sciences with emphasis in Biochemistry. Worked on a research project in final year(see publications)</h5>
+                        </th>
+                        </tr>
+
                     </table>
                     <hr>
                     <h4>Careers</h4>
