put back to main

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                     <br />
                     <div class="row">
                         <div class="col-xs-12 col-lg-6">
-                            <a href="https://github.com/samuelfooks/samuelfooks.github.io/blob/main/assets/interactive_map.html" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/RyantHults/resume-page/master/assets/images/nphase-thumb.png" /></a>
+                            <a href="http://nphase.xyz/" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/RyantHults/resume-page/master/assets/images/nphase-thumb.png" /></a>
                         </div>
                         <div class="col-xs-12 col-lg-6 second-portfolio">
                             <a href="http://temp.link" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/RyantHults/resume-page/master/assets/images/ph-thumb.png" /></a>
