--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                             <a href="http://nphase.xyz/" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/samuelfooks/github.io/master/assets/cyclingmap.png" /></a>
                         </div>
                         <div class="col-xs-12 col-lg-6 second-portfolio">
-                            <a href="https://github.com/samuelfooks/samuelfooks.github.io/blob/main/interactive_map.html" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/samuelfooks/github.io/master/assets/cyclingmap.png" /></a>
+                            <a href="https://github.com/samuelfooks/samuelfooks.github.io/interactive_map.html" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/samuelfooks/github.io/master/assets/cyclingmap.png" /></a>
                         </div>
                     </div>
                     <br />
