--- a/index.html
+++ b/index.html
@@ -364,12 +364,13 @@
                 <div class="col-xs-12 col-sm-8 col-lg-6 col-sm-offset-2 col-lg-offset-3">
                     <br />
                     <div class="row">
+                        <div class="col-xs-12 col-lg-6 second-portfolio">
+                            <a href="https://samuelfooks.github.io/interactive_map.html" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/samuelfooks/github.io/master/assets/cyclingmap.png" /></a>
+                        </div>
                         <div class="col-xs-12 col-lg-6">
                             <a href="http://nphase.xyz/" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/samuelfooks/github.io/master/assets/cyclingmap.png" /></a>
                         </div>
-                        <div class="col-xs-12 col-lg-6 second-portfolio">
-                            <a href="https://github.com/samuelfooks/samuelfooks.github.io/interactive_map.html" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/samuelfooks/github.io/master/assets/cyclingmap.png" /></a>
-                        </div>
+                        
                     </div>
                     <br />
                     <div class="row">
