--- a/index.html
+++ b/index.html
@@ -388,14 +388,14 @@
                         
                     </div>
                     <br />
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-xs-12 col-lg-6 justify-content-center">
                             <a href="http://temp.link" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/RyantHults/resume-page/master/assets/images/ph-thumb.png" /></a>
                         </div>
-                        <!-- <div class="col-xs-12 col-lg-6 second-portfolio">
+                        <div class="col-xs-12 col-lg-6 second-portfolio">
                             <a href="http://temp.link" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/RyantHults/resume-page/master/assets/images/ph-thumb.png" /></a>
-                        </div> -->
-                    </div>
+                        </div>
+                    </div> -->
                 </div>
             </div>
 
