--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                     </th>
                                 </tr>
                                 <tr>
-                                    <th><h5>TensorFlow/PyTorch</h5></th>
+                                    <th><h5>TensorFlow</h5></th>
                                     <th class="text-right"><h5><h5>
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
