--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
                         <div class="col-xs-12 col-lg-6 justify-content-center">
                             <a href="https://samuelfooks.github.io/interactive_map.html" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/samuelfooks/github.io/master/assets/cyclingmap.png" /></a>
                         </div>
-                        <!-- <div class="col-xs-12 col-lg-6 second-portfolio">
-                            <a href="http://nphase.xyz/" target="__blank" ><img class="img-responsive" src="https://raw.githubusercontent.com/samuelfooks/github.io/master/assets/cyclingmap.png" /></a>
-                        </div> -->
+                        <div class="col-xs-12 col-lg-6 second-portfolio">
+                            <a href=https://github.com/samuelfooks/Agilytic-hackathon" target="__blank" ><img class="img-responsive"/>Agilytic-hackathon</a>
+                        </div>
                         
                     </div>
                     <br />
