--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                             <th>Bachelor of Environmental Science-Minor Biochemistry<br />
                                 <h5>
                                     <ul>
-                                        <li>Collaborated on a vertical farming project</li>
-                                        <li>Installing drinking water fountains to replace plastic water bottles</li>
-                                        <li>Placing ventilation and climitisation appliances</li>
-                                        <li>Electricty work</li>
+                                        <li>Core coursework in Biology, Chemistry, Earth Science, and Mathematics</li>
+                                        <li>Co-operative work periods in various lab functions provided real-world work experience</li>
+                                        <li>Completion of Final Year Research project in Paleolimnology</li>
+                                        <li><a href = "https://onlinelibrary.wiley.com/doi/epdf/10.1002/ece3.1354">Publication</a></li>
                                     </ul>
                                 </h5>
                             </th>
