--- a/index.html
+++ b/index.html
@@ -115,11 +115,9 @@
                     <img class="img-responsive img-circle center-block" id="profile-image" src="https://avatars.githubusercontent.com/u/54527099?s=400&u=ea4d787a54dd2aa39b10a224a16fb80e244ace35&v=4" alt="A picture of me" />
                 </div>
                 <div class="col-xs-8 col-sm-2 col-lg-2 col-xs-offset-2 col-sm-offset-0 text-left" id="right-profile">
-                    <h2>Driven Machine Learning Engineer(junior) looking to leverage new skils and
-                        create a positive impact. </h2>
-                    <h2>After working as a technicical subcontractor in sustainsable
-                        installations/projects, I decided to connect my passion for sustainability,
-                       problem solving skills, and collaborative mentality with Data Science.</h2> 
+                    <h2>Highly motivated Junior Data Scientist with a strong technical background in sustainable projects/installations. </h2>
+                    <h2> Proven skills in data preprocessing, statistical modeling, machine learning, and data visualisation techniques. Seeking 
+                        a challenging role where I can apply my skills and expertise to contribute to the success of data-driven entreprises.</h2> 
                 </div>
             </div>
 
@@ -134,28 +132,12 @@
                                 <h5>September 2022 - April 2023</h5>
                             </th>
                             <th>AI and Machine Learning Bootcamp<br />
-                                <h5>Project-based Machine Learning training program designed to lift students into the job market within 7 months.  Projects and tasks from BeCode clients are used to teach core technologies in Data Engineering, Data Analysis, and Machine Learning.</h5>
+                                <h5>Project-based Machine Learning training program designed to equip learners with the skills needed to secure a job in Data Science. Students work on real-world projects sourced from BeCode clients, and learn core technologies used in Data Analysis, Machine Learning, and Data Engineering.</h5>
                         </tr>
                     </table>
                     <hr>
                     <h4>Technical</h4>
                     <table class="table exp-table">
-                        <tr>
-                            <th>Conestoga College<br /> (Kitchener, Canada)
-                                <h5>2017</h5>
-                            </th>
-                            <th>Certificate in Renewable Energy 
-                                <h5>
-                                    <ul>
-                                        <li>Collaborated on a vertical farming project</li>
-                                        <li>Installing drinking water fountains to replace plastic water bottles</li>
-                                        <li>Placing ventilation and climitisation appliances</li>
-                                        <li>Electricty work</li>
-                                    </ul>   
-                                </h5>
-                            </th>
-                        </tr>
-                        <tr>
                         <tr>
                             <th>Contractor <br />(Eenmanszaak)
                                 <h5>2022</h5>
@@ -171,6 +153,38 @@
                                 </h5>
                             </th>
                         </tr>
+                        <tr>
+                            <th>Geothermal Heatpump Technician <br />
+                                <h5>2022</h5>
+                            </th>
+                            <th>Installer<br />
+                                <h5>
+                                    <ul>
+                                        <li>Installed infloor heating systems</li>
+                                        <li>Piping and plumbing installation work</li>
+                                        <li>Ground work and assisting geothermal drilling operations</li>
+                                        <li>Documenting and organising work completion</li>
+                                    </ul>
+                                </h5>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>Conestoga College<br /> (Kitchener, Canada)
+                                <h5>2017</h5>
+                            </th>
+                            <th>Certificate in Renewable Energy 
+                                <h5>
+                                    <ul>
+                                        <li>Technical learning program in Renewable Energy Technologies</li>
+                                        <li>Solar PV/Solar Thermal Heating</li>
+                                        <li>Micro Wind and Micro Hydro-Electric power generation plants</li>
+                                        <li>Off-Grid Energy Systems</li>
+                                    </ul>   
+                                </h5>
+                            </th>
+                        </tr>
+                        <tr>
+                        
                         <tr>
                     </table>
 
