--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <th>University of Waterloo<br /> (Waterloo, Canada)
                                 <h5>2006-2011</h5>
                             </th>
-                            <th>Bachelor of Environmental Science-Minor Biochemistry<br />
+                            <th>Bachelor of Environmental Science-<br />Minor Biochemistry
                                 <h5>
                                     <ul>
                                         <li>Core coursework in Biology, Chemistry, Earth Science, and Mathematics</li>
