--- a/index.html
+++ b/index.html
@@ -154,16 +154,16 @@
                             </th>
                         </tr>
                         <tr>
-                            <th>Geothermal Heatpump Technician <br />
-                                <h5>2022</h5>
+                            <th>EcoHeating BVBA <br />
+                                <h5>2020/2021</h5>
                             </th>
-                            <th>Installer<br />
+                            <th>Geothermal Heating Systems Technician<br />
                                 <h5>
                                     <ul>
-                                        <li>Installed infloor heating systems</li>
-                                        <li>Piping and plumbing installation work</li>
-                                        <li>Ground work and assisting geothermal drilling operations</li>
-                                        <li>Documenting and organising work completion</li>
+                                        <li>Installation of infloor heating systems</li>
+                                        <li>Circulation piping and plumbing installation work</li>
+                                        <li>Drilling and ground-work operations</li>
+                                        <li>Documenting and organising installation work</li>
                                     </ul>
                                 </h5>
                             </th>
